Bug 1296453 - [MSE] P1. Fix eviction. r=gerald, a=lizzard

The MP4 demuxer returns INT64_MAX when all data can be safely evicted
from the MediaResource.
Additionally, the MP4Demuxer will read the MediaResource using
CacheReadAt.

Eviction in the SourceBufferResource had a safeguard to ensure we would
never evict data we hadn't read yet. This was done by keeping the
position of the last data read in the mOffset member. CacheReadAt
however doesn't update mOffset.

As a result, no data was ever removed from the input buffer when using
MP4.

MozReview-Commit-ID: 2tAWzpMlOjG

--HG--
extra : source : 6f87d2ddadafac5822030570eac63e56bc4e3775
extra : intermediate-source : fc33239f919a377fed3d9bd3185e14c25ab7d7c6